force-app/main/default/objects/Market_Event_Impacted_Account__c/Market_Event_Impacted_Account__c.object-meta.xml
<CustomObject>
    <label>Market Event Impacted Account</label>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Market Event Impacted Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Event Impacted Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>