force-app/main/default/objects/Market_Event_Impacted_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Event Impacted Accounts</relationshipLabel>
    <relationshipName>Market_Event_Impacted_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>