force-app/main/default/objects/Market_Event_Impacted_Account__c/fields/Advisory_Message__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Message__c</fullName>
    <label>Advisory Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>