force-app/main/default/objects/Market_Event_Impacted_Account__c/fields/InteractionId__c.field-meta.xml
<CustomField>
    <fullName>InteractionId__c</fullName>
    <description>To store interactionid for each market event news that arrive</description>
    <label>InteractionId</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>