force-app/main/default/objects/Market_Event_Impacted_Account__c/fields/Market_Event__c.field-meta.xml
<CustomField>
    <fullName>Market_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Event</label>
    <referenceTo>marketevents__c</referenceTo>
    <relationshipLabel>Market Event Impacted Accounts</relationshipLabel>
    <relationshipName>Market_Event_Impacted_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>