force-app/main/default/objects/Market_Event_Impacted_Account__c/fields/Market_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Market_Event_Id__c</fullName>
    <label>Market Event Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>