force-app/main/default/objects/Market_Event_Impacted_Account__c/fields/Market_Event_Title__c.field-meta.xml
<CustomField>
    <fullName>Market_Event_Title__c</fullName>
    <formula>Market_Event__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Event Title</label>
    <type>Text</type>
</CustomField>