force-app/main/default/objects/Market_Event_Impacted_Account__c/fields/Picked_Status__c.field-meta.xml
<CustomField>
    <fullName>Picked_Status__c</fullName>
    <label>Picked Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Picked</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Picked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>