force-app/main/default/objects/Market_Event_Impacted_Account__c/fields/ProcessedFlag__c.field-meta.xml
<CustomField>
    <fullName>ProcessedFlag__c</fullName>
    <description>To store one of these values- New, AwaitingApproval, Approved,Sent</description>
    <label>ProcessedFlag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>