force-app/main/default/objects/Market_Event_Impacted_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Advisory_Message__c</columns>
    <columns>Communication_Channel__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ProcessedFlag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>