force-app/main/default/objects/Market_Event_Impacted_Account__c/listViews/Today_s_Advisory.listView-meta.xml
<ListView>
    <fullName>Today_s_Advisory</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Advisory_Message__c</columns>
    <columns>Communication_Channel__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Market_Event__c</columns>
    <columns>Market_Event_Id__c</columns>
    <columns>Market_Event_Title__c</columns>
    <columns>ProcessedFlag__c</columns>
    <columns>InteractionId__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ProcessedFlag__c</field>
        <operation>equals</operation>
        <value>Awaiting Approval,Approved</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Advisory</label>
</ListView>